chandeliers-lus/tests/fail/ui/tc/extern/dupdef.rs
chandeliers_lus::decl! {
    const X: int = 0;
}

chandeliers_lus::decl! {
    const X: int = 0;
}

chandeliers_lus::decl! {
    node foo() returns ();
    let tel
}

chandeliers_lus::decl! {
    node foo() returns ();
    let tel
}

fn main() {}
