chandeliers-lus/tests/fail/ui/tc/extern/dupdef.stderr
error[E0428]: the name `X` is defined multiple times
 --> tests/fail/ui/tc/extern/dupdef.rs:7:11
  |
3 |     const X: int = 0;
  |           - previous definition of the value `X` here
...
7 |     const X: int = 0;
  |           ^ `X` redefined here
  |
  = note: `X` must be defined only once in the value namespace of this module

error[E0428]: the name `foo` is defined multiple times
  --> tests/fail/ui/tc/extern/dupdef.rs:16:10
   |
11 |     node foo() returns ();
   |          --- previous definition of the type `foo` here
...
16 |     node foo() returns ();
   |          ^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the type namespace of this module

error[E0119]: conflicting implementations of trait `Debug` for type `foo`
  --> tests/fail/ui/tc/extern/dupdef.rs:16:10
   |
11 |     node foo() returns ();
   |          --- first implementation here
...
16 |     node foo() returns ();
   |          ^^^ conflicting implementation for `foo`
   |
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Default` for type `foo`
  --> tests/fail/ui/tc/extern/dupdef.rs:16:10
   |
11 |     node foo() returns ();
   |          --- first implementation here
...
16 |     node foo() returns ();
   |          ^^^ conflicting implementation for `foo`
   |
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `chandeliers_sem::stepping::Step` for type `foo`
  --> tests/fail/ui/tc/extern/dupdef.rs:16:10
   |
11 |     node foo() returns ();
   |          --- first implementation here
...
16 |     node foo() returns ();
   |          ^^^ conflicting implementation for `foo`
